<resources>
    <string name="app_name">Proyecto1Trimestre</string>
    <string name="title_activity_detalles_empresa">DetallesEmpresa</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="Nombre">Nombre:</string>
    <string name="Web">Web:</string>
    <string name="Email">Email:</string>
    <string name="Direccion">Direccion:</string>
    <string name="Telefono">Telefono:</string>
</resources>