<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:overScrollMode="always"
    android:isScrollContainer="true"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbarStyle="outsideInset">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-33dp"
        tools:layout_editor_absoluteY="1dp">

        <ImageView
            android:id="@+id/imgLogoEmpresa"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="4dp"
            app:flow_horizontalAlign="center"
            app:layout_constraintStart_toEndOf="@+id/tvNombre"
            app:layout_constraintTop_toTopOf="parent"></ImageView>

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:layout_marginBottom="95dp"
            android:text="Guardar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btnPersonasDeContacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="27dp"
            android:text="Personas de Contacto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:text="@string/Nombre"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvNombreEmpresa"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:text="@string/Email"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvEmailEmpresa"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edLocalizacionEmpresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:inputType="text"
            android:maxLength="50"
            android:minWidth="60dp"
            android:maxWidth="200dp"
            android:textSize="15dp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvLocalizacion"
            app:layout_constraintStart_toEndOf="@+id/tvLocalizacion" />

        <TextView
            android:id="@+id/tvTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Telefono"
            app:layout_constraintBaseline_toBaselineOf="@+id/edTelefonoEmpresa"
            app:layout_constraintEnd_toEndOf="@+id/tvLocalizacion"
            app:layout_constraintStart_toStartOf="@+id/tvLocalizacion" />

        <ImageButton
            android:id="@+id/btnLocalizacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="51dp"
            android:layout_marginTop="36dp"
            android:src="@drawable/ic_location_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail"></ImageButton>

        <TextView
            android:id="@+id/tvWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:text="@string/Web"
            app:layout_constraintBaseline_toBaselineOf="@+id/tvWebEmpresa"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edTelefonoEmpresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="13dp"
            android:inputType="number"
            android:maxWidth="200dp"
            android:maxLength="9"
            android:minWidth="60dp"
            android:textSize="15dp"
            app:layout_constraintBottom_toTopOf="@+id/tvTelefonoEmpresa"
            app:layout_constraintStart_toEndOf="@+id/tvTelefono" />

        <TextView
            android:id="@+id/tvLocalizacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="12dp"
            android:text="@string/Direccion"
            app:layout_constraintStart_toEndOf="@+id/btnLocalizacion"
            app:layout_constraintTop_toTopOf="@+id/btnLocalizacion" />

        <TextView
            android:id="@+id/tvNombreEmpresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginBottom="18dp"
            app:layout_constraintBottom_toTopOf="@+id/tvWebEmpresa"
            app:layout_constraintStart_toEndOf="@+id/tvNombre" />

        <TextView
            android:id="@+id/tvWebEmpresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="216dp"
            android:layout_marginBottom="423dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constrainedWidth="true"
            app:layout_constraintHorizontal_bias="1"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvWeb"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tvEmailEmpresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="386dp"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvEmail" />

        <TextView
            android:id="@+id/tvLocalizacionEmpresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            android:layout_marginLeft="20dp"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toStartOf="@+id/edLocalizacionEmpresa"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/edLocalizacionEmpresa"
            app:layout_constraintTop_toBottomOf="@+id/edLocalizacionEmpresa"
            app:layout_constraintVertical_bias="0.238"></TextView>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="33dp"
            android:layout_height="33dp"
            android:layout_marginBottom="64dp"
            android:src="@drawable/ic_baseline_local_phone_24"
            app:layout_constraintBottom_toTopOf="@+id/btnGuardar"
            app:layout_constraintEnd_toEndOf="@+id/btnLocalizacion"
            app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintStart_toStartOf="@+id/btnLocalizacion"></ImageView>

        <TextView
            android:id="@+id/tvTelefonoEmpresa"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:layout_marginTop="79dp"
            android:layout_marginBottom="80dp"
            app:layout_constraintBottom_toBottomOf="@+id/btnGuardar"
            app:layout_constraintEnd_toStartOf="@+id/edTelefonoEmpresa"
            app:layout_constraintStart_toStartOf="@+id/edTelefonoEmpresa"
            app:layout_constraintTop_toBottomOf="@+id/tvLocalizacionEmpresa"></TextView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>